fix class collapsed for treeview

--- a/less/utils.less
+++ b/less/utils.less
@@ -306,3 +306,6 @@
 	}
 }
 
+.pos-abs {position: absolute !important;}
+.pos-rel {position: relative !important;}
+.pos-fix {position: fixed !important;}
